tests/build/cases/widget_new/cannot_use_unset_property1.stderr
error: cannot use unset property `margin` in when
  --> $DIR/cannot_use_unset_property1.rs:15:19
   |
15 |         when *#margin == 0 { }
   |                   ^^^^^^
